--- a/pc-web/src/main/resources/templates/vet/vet-list.html
+++ b/pc-web/src/main/resources/templates/vet/vet-list.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'vets')}">
 <head>
   <meta charset="UTF-8">
   <title>Vet index</title>
 </head>
 <body>
-<h1 th:text="vets">List of vets</h1>
-<table>
+<h2 th:text="vets">List of vets</h2>
+<table class="table table-striped">
   <thead>
   <tr>
-    <th>ID</th>
-    <th>First Name</th>
-    <th>Last Name</th>
+    <th style="width: 150px;">ID</th>
+    <th style="width: 200px;">First Name</th>
+    <th style="width: 200px;">Last Name</th>
   </tr>
   </thead>
   <tbody>
